--- a/src/pretix/control/templates/pretixcontrol/order/cancel.html
+++ b/src/pretix/control/templates/pretixcontrol/order/cancel.html
@@ -4,35 +4,41 @@
     {% trans "Cancel order" %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% trans "Cancel order" %}
-    </h1>
-    <p>{% blocktrans trimmed %}
-        Do you really want to cancel this order? You cannot revert this action.
-    {% endblocktrans %}</p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">
+                {% trans "Cancel order" %}
+            </h1>
+        </div>
+        <div class="panel-body">
+            <p>{% blocktrans trimmed %}
+                Do you really want to cancel this order? You cannot revert this action.
+            {% endblocktrans %}</p>
 
-    <form method="post" href="">
-        {% csrf_token %}
-        <input type="hidden" name="status" value="c"/>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" name="send_email" value="on" checked="checked">
-                {% trans "Notify user by e-mail" %}
-            </label>
+            <form method="post" href="">
+                {% csrf_token %}
+                <input type="hidden" name="status" value="c"/>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" name="send_email" value="on" checked="checked">
+                        {% trans "Notify user by e-mail" %}
+                    </label>
+                </div>
+                <div class="row checkout-button-row">
+                    <div class="col-md-4">
+                        <a class="btn btn-block btn-default btn-lg"
+                           href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                            {% trans "No, take me back" %}
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-md-offset-4">
+                        <button class="btn btn-block btn-danger btn-lg" type="submit">
+                            {% trans "Yes, cancel order" %}
+                        </button>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </form>
         </div>
-        <div class="row checkout-button-row">
-            <div class="col-md-4">
-                <a class="btn btn-block btn-default btn-lg"
-                        href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-                    {% trans "No, take me back" %}
-                </a>
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                <button class="btn btn-block btn-danger btn-lg" type="submit">
-                    {% trans "Yes, cancel order" %}
-                </button>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </form>
+    </div>
 {% endblock %}
