--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -7,49 +7,60 @@
     {% endblocktrans %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% blocktrans trimmed with code=order.code %}
-            Change order: {{ code }}
-        {% endblocktrans %}
-        <a class="btn btn-link btn-lg"
-                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-            {% blocktrans trimmed with order=order.code %}
-                Back to order {{ order }}
-            {% endblocktrans %}
-        </a>
-    </h1>
-    <p>
-        {% blocktrans trimmed %}
-            You can use this tool to change the ordered products or to partially cancel the order. Please keep
-            in mind that changing an order can have several implications, e.g. the payment method fee might change or
-            additional questions can be added to the order that need to be answered by the user.
-        {% endblocktrans %}
-    </p>
-    <p>
-        {% blocktrans trimmed %}
-            The user will receive a notification about the change but in the case of new required questions, the user
-            will not be forced to answer them.
-        {% endblocktrans %}
-    </p>
-    <p>
-        {% blocktrans trimmed %}
-            If an invoice is attached to the order, a cancellation will be created together with a new invoice.
-        {% endblocktrans %}
-    </p>
-    <p>
-        {% blocktrans trimmed %}
-            If you chose "split into new order" for multiple positions, they will be all split in one second order
-            together, not multiple orders.
-        {% endblocktrans %}
-    </p>
-    <div class="alert alert-warning"><strong>
-        {% blocktrans trimmed %}
-            Please use this tool carefully. Changes you make here are not reversible. Also, if you change an order
-            manually, not all constraints (e.g. on required add-ons) will be checked. Therefore, you might construct
-            an order that would not be able to exist otherwise.
-            In most cases it is easier to cancel the order completely and create a new one.
-        {% endblocktrans %}
-    </strong></div>
+    <div class="panel panel-default panel-with-btn">
+        <div class="panel-heading">
+            <a class="btn btn-default btn-sm pull-right"
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                {% blocktrans trimmed with order=order.code %}
+                    Back to order {{ order }}
+                {% endblocktrans %}
+            </a>
+            <h1 class="panel-title">
+                {% blocktrans trimmed with code=order.code %}
+                    Change order: {{ code }}
+                {% endblocktrans %}
+            </h1>
+        </div>
+        <div class="panel-body">
+            <p>
+                {% blocktrans trimmed %}
+                    You can use this tool to change the ordered products or to partially cancel the order. Please keep
+                    in mind that changing an order can have several implications, e.g. the payment method fee might
+                    change or
+                    additional questions can be added to the order that need to be answered by the user.
+                {% endblocktrans %}
+            </p>
+            <p>
+                {% blocktrans trimmed %}
+                    The user will receive a notification about the change but in the case of new required questions, the
+                    user
+                    will not be forced to answer them.
+                {% endblocktrans %}
+            </p>
+            <p>
+                {% blocktrans trimmed %}
+                    If an invoice is attached to the order, a cancellation will be created together with a new invoice.
+                {% endblocktrans %}
+            </p>
+            <p>
+                {% blocktrans trimmed %}
+                    If you chose "split into new order" for multiple positions, they will be all split in one second
+                    order
+                    together, not multiple orders.
+                {% endblocktrans %}
+            </p>
+            <div class="alert alert-warning"><strong>
+                {% blocktrans trimmed %}
+                    Please use this tool carefully. Changes you make here are not reversible. Also, if you change an
+                    order
+                    manually, not all constraints (e.g. on required add-ons) will be checked. Therefore, you might
+                    construct
+                    an order that would not be able to exist otherwise.
+                    In most cases it is easier to cancel the order completely and create a new one.
+                {% endblocktrans %}
+            </strong></div>
+        </div>
+    </div>
     <form method="post" href="">
         {% csrf_token %}
         {% for position in positions %}
@@ -63,10 +74,10 @@
                         {% endif %}
                         {% if position.addon_to %}
                             – <em>
-                                {% blocktrans trimmed with posid=position.addon_to.positionid %}
-                                    Add-On to position #{{ posid }}
-                                {% endblocktrans %}
-                            </em>
+                            {% blocktrans trimmed with posid=position.addon_to.positionid %}
+                                Add-On to position #{{ posid }}
+                            {% endblocktrans %}
+                        </em>
                         {% endif %}
                     </h3>
                 </div>
@@ -84,14 +95,14 @@
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value=""
-                                        {% if not position.form.operation.value %}checked="checked"{% endif %}>
+                                       {% if not position.form.operation.value %}checked="checked"{% endif %}>
                                 {% trans "Keep unchanged" %}
                             </label>
                         </div>
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value="product"
-                                        {% if position.form.operation.value == "product" %}checked="checked"{% endif %}>
+                                       {% if position.form.operation.value == "product" %}checked="checked"{% endif %}>
                                 {% trans "Change product to" %}
                                 {% bootstrap_field position.form.itemvar layout='inline' %}
                             </label>
@@ -100,7 +111,7 @@
                             <div class="radio">
                                 <label>
                                     <input name="{{ position.form.prefix }}-operation" type="radio" value="subevent"
-                                            {% if position.form.operation.value == "subevent" %}checked="checked"{% endif %}>
+                                           {% if position.form.operation.value == "subevent" %}checked="checked"{% endif %}>
                                     {% trans "Change date to" context "subevent" %}
                                     {% bootstrap_field position.form.subevent layout='inline' %}
                                 </label>
@@ -109,7 +120,7 @@
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value="price"
-                                        {% if position.form.operation.value == "price" %}checked="checked"{% endif %}>
+                                       {% if position.form.operation.value == "price" %}checked="checked"{% endif %}>
                                 {% trans "Change price to" %}
                                 {% bootstrap_field position.form.price addon_after=request.event.currency layout='inline' %}
                                 {% if position.apply_tax %}
@@ -130,21 +141,21 @@
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value="split"
-                                        {% if position.form.operation.value == "split" %}checked="checked"{% endif %}>
+                                       {% if position.form.operation.value == "split" %}checked="checked"{% endif %}>
                                 {% trans "Split into new order" %}
                             </label>
                         </div>
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value="secret"
-                                        {% if position.form.operation.value == "secret" %}checked="checked"{% endif %}>
+                                       {% if position.form.operation.value == "secret" %}checked="checked"{% endif %}>
                                 {% trans "Generate a new secret" %}
                             </label>
                         </div>
                         <div class="radio">
                             <label>
                                 <input name="{{ position.form.prefix }}-operation" type="radio" value="cancel"
-                                        {% if position.form.operation.value == "cancel" %}checked="checked"{% endif %}>
+                                       {% if position.form.operation.value == "cancel" %}checked="checked"{% endif %}>
                                 {% trans "Remove from order" %}
                                 {% if position.addons.exists %}
                                     <em class="text-danger">
@@ -204,7 +215,7 @@
         </div>
         <div class="form-group submit-group">
             <a class="btn btn-default btn-lg"
-                    href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
                 {% trans "Cancel" %}
             </a>
             <button class="btn btn-primary btn-save btn-lg" type="submit">
