--- a/src/pretix/control/templates/pretixcontrol/order/change_locale.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change_locale.html
@@ -5,34 +5,40 @@
     {% trans "Change locale information" %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% trans "Change locale information" %}
-        <a class="btn btn-link btn-lg"
-                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-            {% blocktrans trimmed with order=order.code %}
-                Back to order {{ order }}
-            {% endblocktrans %}
-        </a>
-    </h1>
-    <p>
-        {% blocktrans trimmed %}
-            This language will be used whenever emails are sent to the users.
-        {% endblocktrans %}
-    </p>
-
-    <form method="post" class="form-horizontal" href="">
-        {% csrf_token %}
-        <input type="hidden" name="status" value="c"/>
-        {% bootstrap_form form layout='horizontal' %}
-        <div class="form-group submit-group">
-            <a class="btn btn-default btn-lg"
-                    href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-                {% trans "Cancel" %}
+    <div class="panel panel-default panel-with-btn">
+        <div class="panel-heading">
+            <a class="btn btn-default btn-sm pull-right"
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                {% blocktrans trimmed with order=order.code %}
+                    Back to order {{ order }}
+                {% endblocktrans %}
             </a>
-            <button class="btn btn-primary btn-save btn-lg" type="submit">
-                {% trans "Save" %}
-            </button>
-            <div class="clearfix"></div>
+            <h1 class="panel-title">
+                {% trans "Change locale information" %}
+            </h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <p>
+                {% blocktrans trimmed %}
+                    This language will be used whenever emails are sent to the users.
+                {% endblocktrans %}
+            </p>
+
+            <form method="post" class="form-horizontal" href="">
+                {% csrf_token %}
+                <input type="hidden" name="status" value="c"/>
+                {% bootstrap_form form layout='horizontal' %}
+                <div class="form-group submit-group">
+                    <a class="btn btn-default btn-lg"
+                       href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button class="btn btn-primary btn-save btn-lg" type="submit">
+                        {% trans "Save" %}
+                    </button>
+                    <div class="clearfix"></div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
