--- a/src/pretix/control/templates/pretixcontrol/order/pay.html
+++ b/src/pretix/control/templates/pretixcontrol/order/pay.html
@@ -5,32 +5,38 @@
     {% trans "Mark order as paid" %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% trans "Mark order as paid" %}
-        <a class="btn btn-link btn-lg"
-                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-            {% blocktrans trimmed with order=order.code %}
-                Back to order {{ order }}
-            {% endblocktrans %}
-        </a>
-    </h1>
-
-    <form method="post" class="form-horizontal" href="">
-        {% csrf_token %}
-        <p>{% blocktrans trimmed %}
-            Do you really want to mark this order as paid?
-        {% endblocktrans %}</p>
-        <input type="hidden" name="status" value="p" />
-        {% bootstrap_form form layout='horizontal' horizontal_label_class='sr-only' horizontal_field_class='col-md-12' %}
-        <div class="form-group submit-group">
-            <a class="btn btn-default btn-lg"
-                    href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-                {% trans "Cancel" %}
+    <div class="panel panel-default panel-with-btn">
+        <div class="panel-heading">
+            <a class="btn btn-default btn-sm pull-right"
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                {% blocktrans trimmed with order=order.code %}
+                    Back to order {{ order }}
+                {% endblocktrans %}
             </a>
-            <button class="btn btn-primary btn-save btn-lg" type="submit">
-                {% trans "Mark as paid" %}
-            </button>
-            <div class="clearfix"></div>
+            <h1 class="panel-title">
+                {% trans "Mark order as paid" %}
+            </h1>
         </div>
-    </form>
+        <div class="panel-body">
+
+            <form method="post" class="form-horizontal" href="">
+                {% csrf_token %}
+                <p>{% blocktrans trimmed %}
+                    Do you really want to mark this order as paid?
+                {% endblocktrans %}</p>
+                <input type="hidden" name="status" value="p"/>
+                {% bootstrap_form form layout='horizontal' horizontal_label_class='sr-only' horizontal_field_class='col-md-12' %}
+                <div class="form-group submit-group">
+                    <a class="btn btn-default btn-lg"
+                       href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button class="btn btn-primary btn-save btn-lg" type="submit">
+                        {% trans "Mark as paid" %}
+                    </button>
+                    <div class="clearfix"></div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
