--- a/src/pretix/control/templates/pretixcontrol/order/refund.html
+++ b/src/pretix/control/templates/pretixcontrol/order/refund.html
@@ -4,37 +4,43 @@
     {% trans "Refund order" %}
 {% endblock %}
 {% block content %}
-    <h1>
-        {% trans "Refund order" %}
-        <a class="btn btn-link btn-lg"
-                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-            {% blocktrans trimmed with order=order.code %}
-                Back to order {{ order }}
-            {% endblocktrans %}
-        </a>
-    </h1>
-    <form method="post" href="">
-        <p>{% blocktrans trimmed %}
-            Do you really want to refund this order? You cannot revert this action.
-        {% endblocktrans %}</p>
-
-        {{ payment|safe }}
-
-        {% csrf_token %}
-        <input type="hidden" name="status" value="r" />
-        <div class="row checkout-button-row">
-            <div class="col-md-4">
-                <a class="btn btn-block btn-default btn-lg"
-                        href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-                    {% trans "No, take me back" %}
-                </a>
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-                <button class="btn btn-block btn-danger btn-lg" type="submit">
-                    {% trans "Yes, refund order" %}
-                </button>
-            </div>
-            <div class="clearfix"></div>
+    <div class="panel panel-default panel-with-btn">
+        <div class="panel-heading">
+            <a class="btn btn-default btn-sm pull-right"
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                {% blocktrans trimmed with order=order.code %}
+                    Back to order {{ order }}
+                {% endblocktrans %}
+            </a>
+            <h1 class="panel-title">
+                {% trans "Refund order" %}
+            </h1>
         </div>
-    </form>
+        <div class="panel-body">
+            <form method="post" href="">
+                <p>{% blocktrans trimmed %}
+                    Do you really want to refund this order? You cannot revert this action.
+                {% endblocktrans %}</p>
+
+                {{ payment|safe }}
+
+                {% csrf_token %}
+                <input type="hidden" name="status" value="r"/>
+                <div class="row checkout-button-row">
+                    <div class="col-md-4">
+                        <a class="btn btn-block btn-default btn-lg"
+                           href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                            {% trans "No, take me back" %}
+                        </a>
+                    </div>
+                    <div class="col-md-4 col-md-offset-4">
+                        <button class="btn btn-block btn-danger btn-lg" type="submit">
+                            {% trans "Yes, refund order" %}
+                        </button>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
