--- a/src/pretix/control/templates/pretixcontrol/order/sendmail.html
+++ b/src/pretix/control/templates/pretixcontrol/order/sendmail.html
@@ -3,43 +3,51 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Send email" %}{% endblock %}
 {% block content %}
-    <h1>
-        {% trans "Send email" %}
-        <a class="btn btn-link btn-lg"
-                href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
-            {% blocktrans trimmed with order=order.code %}
-                Back to order {{ order }}
-            {% endblocktrans %}
-        </a>
-    </h1>
-    {% block inner %}
-        <form class="form-horizontal" method="post" action="">
-            {% csrf_token %}
-            {% bootstrap_field form.sendto layout='horizontal' %}
-            {% bootstrap_field form.subject layout='horizontal' %}
-            {% bootstrap_field form.message layout='horizontal' %}
-            {% if request.method == "POST" %}
-                <fieldset>
-                    <legend>{% trans "E-mail preview" %}</legend>
-                    <div class="tab-pane mail-preview-group">
-                        <pre lang="" class="mail-preview">
-                            {% for segment in preview_output %}
-                                {% spaceless %}
-                                    {{ segment|linebreaksbr }}
-                                {% endspaceless %}
-                            {% endfor %}
-                        </pre>
-                    </div>
-                </fieldset>
-            {% endif %}
-            <div class="form-group submit-group">
-                <button type="submit" class="btn btn-default btn-save pull-left" name="action" value="preview">
-                {% trans "Preview email" %}
-                </button>
-                <button type="submit" class="btn btn-primary btn-save">
-                    {% trans "Send" %}
-                </button>
+    <div class="panel panel-default panel-with-btn">
+        <div class="panel-heading">
+            <a class="btn btn-default btn-sm pull-right"
+               href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=order.code %}">
+                {% blocktrans trimmed with order=order.code %}
+                    Back to order {{ order }}
+                {% endblocktrans %}
+            </a>
+            <h1 class="panel-title">
+                {% trans "Send email" %}
+            </h1>
+        </div>
+        <div class="panel-body">
+            <form class="form-horizontal" method="post" action="">
+                {% csrf_token %}
+                {% bootstrap_field form.sendto layout='horizontal' %}
+                {% bootstrap_field form.subject layout='horizontal' %}
+                {% bootstrap_field form.message layout='horizontal' %}
+                <div class="form-group submit-group">
+                    <button type="submit" class="btn btn-default btn-save pull-left" name="action" value="preview">
+                        {% trans "Preview email" %}
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-save">
+                        {% trans "Send" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    {% if request.method == "POST" %}
+        <fieldset class="panel panel-default">
+            <div class="panel-heading">
+                <legend>{% trans "E-mail preview" %}</legend>
             </div>
-        </form>
-    {% endblock %}
+            <div class="panel-body">
+                <div class="tab-pane mail-preview-group">
+                <pre lang="" class="mail-preview">
+                    {% for segment in preview_output %}
+                        {% spaceless %}
+                            {{ segment|linebreaksbr }}
+                        {% endspaceless %}
+                    {% endfor %}
+                </pre>
+                </div>
+            </div>
+        </fieldset>
+    {% endif %}
 {% endblock %}
