--- a/src/pretix/control/templates/pretixcontrol/orders/overview.html
+++ b/src/pretix/control/templates/pretixcontrol/orders/overview.html
@@ -3,31 +3,42 @@
 {% load order_overview %}
 {% block title %}{% trans "Sales overview" %}{% endblock %}
 {% block content %}
-    {% url "control:event.orders" organizer=request.event.organizer.slug event=request.event.slug as listurl %}
-    <div class="pull-right">
-        <div class="btn-group" role="group" id="sumtoggle">
-            <button type="button" data-target=".count" class="btn btn-default active">{% trans "Sales" %}</button>
-            <button type="button" data-target=".sum-gross" class="btn btn-default">{% trans "Revenue (gross)" %}</button>
-            <button type="button" data-target=".sum-net" class="btn btn-default">{% trans "Revenue (net)" %}</button>
+    <div class="panel panel-default panel-with-button">
+        <div class="panel-heading">
+            {% url "control:event.orders" organizer=request.event.organizer.slug event=request.event.slug as listurl %}
+            <div class="pull-right">
+                <div class="btn-group" role="group" id="sumtoggle">
+                    <button type="button" data-target=".count"
+                            class="btn btn-sm btn-default active">{% trans "Sales" %}</button>
+                    <button type="button" data-target=".sum-gross"
+                            class="btn btn-sm btn-default">{% trans "Revenue (gross)" %}</button>
+                    <button type="button" data-target=".sum-net"
+                            class="btn btn-sm btn-default">{% trans "Revenue (net)" %}</button>
+                </div>
+            </div>
+            <h1 class="panel-title">{% trans "Order overview" %}</h1>
+            <div class="clearfix"></div>
         </div>
-    </div>
-	<h1>{% trans "Order overview" %}</h1>
-    {% if request.event.has_subevents %}
-        <form class="form-inline helper-display-inline" action="" method="get">
-            {% include "pretixcontrol/event/fragment_subevent_choice_simple.html" %}
-        </form>
-    {% endif %}
-    {% if subevent_warning %}
-        <div class="alert alert-info">
-            {% blocktrans trimmed context "subevent" %}
-                If you select a single date, payment method fees will not be listed here as it might not be clear which
-                date they belong to.
-            {% endblocktrans %}
-        </div>
-    {% endif %}
-    <div class="table-responsive">
-        <table class="table table-condensed table-hover table-product-overview">
-            <thead>
+        {% if request.event.has_subevents %}
+            <form class="panel-body form-inline helper-display-inline" action="" method="get">
+                {% include "pretixcontrol/event/fragment_subevent_choice_simple.html" %}
+            </form>
+        {% endif %}
+        {% if subevent_warning %}
+            <div class="panel-body">
+                <div class="alert alert-info">
+                    {% blocktrans trimmed context "subevent" %}
+                        If you select a single date, payment method fees will not be listed here as it might not be
+                        clear
+                        which
+                        date they belong to.
+                    {% endblocktrans %}
+                </div>
+            </div>
+        {% endif %}
+        <div class="table-responsive">
+            <table class="table table-condensed table-hover table-product-overview">
+                <thead>
                 <tr>
                     <th>{% trans "Product" %}</th>
                     <th>{% trans "Canceled" %}</th>
@@ -44,8 +55,8 @@
                     <th>{% trans "Paid" %}</th>
                     <th>{% trans "Total" %}</th>
                 </tr>
-            </thead>
-            <tbody>
+                </thead>
+                <tbody>
                 {% for tup in items_by_category %}
                     {% if tup.0 %}
                         <tr class="category">
@@ -105,8 +116,8 @@
                         {% endif %}
                     {% endfor %}
                 {% endfor %}
-            </tbody>
-            <tfoot>
+                </tbody>
+                <tfoot>
                 <tr class="total">
                     <th>{% trans "Total" %}</th>
                     <th>{{ total.num_canceled|togglesum:request.event.currency }}</th>
@@ -116,7 +127,8 @@
                     <th>{{ total.num_paid|togglesum:request.event.currency }}</th>
                     <th>{{ total.num_total|togglesum:request.event.currency }}</th>
                 </tr>
-            </tfoot>
-        </table>
+                </tfoot>
+            </table>
+        </div>
     </div>
 {% endblock %}
