--- a/src/pretix/control/templates/pretixcontrol/waitinglist/delete.html
+++ b/src/pretix/control/templates/pretixcontrol/waitinglist/delete.html
@@ -3,17 +3,25 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Delete entry" %}{% endblock %}
 {% block content %}
-	<h1>{% trans "Delete entry" %}</h1>
-	<form action="" method="post" class="form-horizontal">
-		{% csrf_token %}
-		<p>{% blocktrans %}Are you sure you want to delete the following waiting list entry <strong>{{ entry }}</strong>?{% endblocktrans %}</p>
-		<div class="form-group submit-group">
-            <a href="{% url "control:event.orders.waitinglist" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
-                {% trans "Cancel" %}
-            </a>
-            <button type="submit" class="btn btn-danger btn-save">
-                {% trans "Delete" %}
-            </button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h1 class="panel-title">{% trans "Delete entry" %}</h1>
         </div>
-	</form>
+        <div class="panel-body">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                <p>{% blocktrans %}Are you sure you want to delete the following waiting list entry
+                    <strong>{{ entry }}</strong>?{% endblocktrans %}</p>
+                <div class="form-group submit-group">
+                    <a href="{% url "control:event.orders.waitinglist" organizer=request.event.organizer.slug event=request.event.slug %}"
+                       class="btn btn-default btn-cancel">
+                        {% trans "Cancel" %}
+                    </a>
+                    <button type="submit" class="btn btn-danger btn-save">
+                        {% trans "Delete" %}
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 {% endblock %}
