--- a/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
+++ b/src/pretix/control/templates/pretixcontrol/waitinglist/index.html
@@ -5,7 +5,6 @@
 {% load urlreplace %}
 {% block title %}{% trans "Waiting list" %}{% endblock %}
 {% block content %}
-    <h1>{% trans "Waiting list" %}</h1>
     {% if not request.event.settings.waiting_list_enabled %}
         <div class="alert alert-danger">
             {% trans "The waiting list is disabled, so if the event is sold out, people cannot add themselves to this list. If you want to enable it, go to the event settings." %}
@@ -14,8 +13,8 @@
     <div class="row">
         {% if 'can_change_orders' in request.eventpermset %}
             <form method="post" class="col-md-6"
-                    action="{% url "control:event.orders.waitinglist.auto" event=request.event.slug organizer=request.organizer.slug %}"
-                    data-asynctask>
+                  action="{% url "control:event.orders.waitinglist.auto" event=request.event.slug organizer=request.organizer.slug %}"
+                  data-asynctask>
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         {% trans "Send vouchers" %}
@@ -25,9 +24,12 @@
                         {% if request.event.settings.waiting_list_auto %}
                             <p>
                                 {% blocktrans trimmed %}
-                                    You have configured that vouchers will automatically be sent to the persons on this list who waited
-                                    the longest as soon as capacity becomes available. It might take up to half an hour for the
-                                    vouchers to be sent after the capacity is available, so don't worry if entries do not disappear
+                                    You have configured that vouchers will automatically be sent to the persons on this
+                                    list who waited
+                                    the longest as soon as capacity becomes available. It might take up to half an hour
+                                    for the
+                                    vouchers to be sent after the capacity is available, so don't worry if entries do
+                                    not disappear
                                     here immediately. If you want, you can also send them out manually right now.
                                 {% endblocktrans %}
                             </p>
@@ -75,42 +77,43 @@
         </div>
     </div>
 
-    <p>
-    <form class="form-inline helper-display-inline" action="" method="get">
-        <select name="status" class="form-control">
-            <option value="a"
-                    {% if request.GET.status == "p" %}selected="selected"{% endif %}>{% trans "All entries" %}</option>
-            <option value="w"
-                    {% if request.GET.status == "w" or not request.GET.status %}selected="selected"{% endif %}>{% trans "Waiting" %}</option>
-            <option value="s"
-                    {% if request.GET.status == "s" %}selected="selected"{% endif %}>{% trans "Voucher assigned" %}</option>
-        </select>
-        <select name="item" class="form-control">
-            <option value="">{% trans "All products" %}</option>
-            {% for item in items %}
-                <option value="{{ item.id }}"
-                        {% if request.GET.item|add:0 == item.id %}selected="selected"{% endif %}>
-                    {{ item }}
-                </option>
-            {% endfor %}
-        </select>
-        {% if request.event.has_subevents %}
-            <select name="subevent" class="form-control">
-                <option value="">{% trans "All dates" context "subevent" %}</option>
-                {% for se in request.event.subevents.all %}
-                    <option value="{{ se.id }}"
-                            {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
-                        {{ se.name }} – {{ se.get_date_range_display }}
-                    </option>
-                {% endfor %}
-            </select>
-        {% endif %}
-        <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
-    </form>
-    </p>
-    <form method="post" action="">
+    <div class="panel panel-default">
+        <div class="panel-heading"><h1 class="panel-title">{% trans "Waiting list" %}</h1></div>
+        <div class="panel-body">
+            <form class="form-inline helper-display-inline" action="" method="get">
+                <select name="status" class="form-control">
+                    <option value="a"
+                            {% if request.GET.status == "p" %}selected="selected"{% endif %}>{% trans "All entries" %}</option>
+                    <option value="w"
+                            {% if request.GET.status == "w" or not request.GET.status %}selected="selected"{% endif %}>{% trans "Waiting" %}</option>
+                    <option value="s"
+                            {% if request.GET.status == "s" %}selected="selected"{% endif %}>{% trans "Voucher assigned" %}</option>
+                </select>
+                <select name="item" class="form-control">
+                    <option value="">{% trans "All products" %}</option>
+                    {% for item in items %}
+                        <option value="{{ item.id }}"
+                                {% if request.GET.item|add:0 == item.id %}selected="selected"{% endif %}>
+                            {{ item }}
+                        </option>
+                    {% endfor %}
+                </select>
+                {% if request.event.has_subevents %}
+                    <select name="subevent" class="form-control">
+                        <option value="">{% trans "All dates" context "subevent" %}</option>
+                        {% for se in request.event.subevents.all %}
+                            <option value="{{ se.id }}"
+                                    {% if request.GET.subevent|add:0 == se.id %}selected="selected"{% endif %}>
+                                {{ se.name }} – {{ se.get_date_range_display }}
+                            </option>
+                        {% endfor %}
+                    </select>
+                {% endif %}
+                <button class="btn btn-primary" type="submit">{% trans "Filter" %}</button>
+            </form>
+        </div>
         {% csrf_token %}
-        <div class="table-responsive">
+        <form method="post" action="" class="table-responsive">
             <table class="table table-condensed table-hover">
                 <thead>
                 <tr>
@@ -142,7 +145,7 @@
                         <td>
                             {% if e.voucher %}
                                 <span class="label label-success">{% trans "Voucher assigned" %}</span>
-                            {% elif e.availability.0 == 100 %}
+                                {% elif e.availability.0 == 100 %}
                                 <span class="label label-warning">
                                 {% blocktrans with num=e.availability.1 %}
                                     Waiting, product {{ num }}x available
@@ -165,7 +168,8 @@
                         </td>
                         <td>
                             {% if not e.voucher %}
-                                <a href="{% url "control:event.orders.waitinglist.delete" organizer=request.event.organizer.slug event=request.event.slug entry=e.id %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                                <a href="{% url "control:event.orders.waitinglist.delete" organizer=request.event.organizer.slug event=request.event.slug entry=e.id %}"
+                                   class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
                             {% else %}
                                 <span class="btn btn-danger btn-sm disabled"><i class="fa fa-trash"></i></span>
                             {% endif %}
@@ -176,7 +180,9 @@
                 {% endfor %}
                 </tbody>
             </table>
+        </form>
+        <div class="panel-footer">
+            {% include "pretixcontrol/pagination.html" %}
         </div>
-    </form>
-    {% include "pretixcontrol/pagination.html" %}
+    </div>
 {% endblock %}
